[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Slime/puddle.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Slime/puddle/puddle-1.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Slime/puddle/puddle-2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 2.37519 )

[node name="puddle" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.661102, -4.29715 )
scale = Vector2( 0.748597, 0.502034 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ray1" type="RayCast2D" parent="."]
position = Vector2( 4.07814, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="ray2" type="RayCast2D" parent="."]
position = Vector2( -6.43917, 0.214638 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -9.8734, -0.214645 )
cast_to = Vector2( 0, 5 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 9.87341, -7.62939e-006 )
cast_to = Vector2( 0, 5 )
[connection signal="body_entered" from="." to="." method="_on__body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
